--- a/web/preguntas/List.xhtml
+++ b/web/preguntas/List.xhtml
@@ -6,58 +6,34 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/template.xhtml">
+    <ui:composition template="/template-admin.xhtml">
 
 
-        <ui:define name="title">
-            <h:outputText value="#{bundle.ListPreguntasTitle}"></h:outputText>
-        </ui:define>
-
-        <ui:define name="body">
+        <ui:define name="contenido">
             <h:form id="PreguntasListForm">
-                <p:panel header="#{bundle.ListPreguntasTitle}">
+                <p:panel>
                     <p:dataTable id="datalist" value="#{preguntasController.items}" var="item"
                                  selectionMode="single" selection="#{preguntasController.selected}"
-                                 paginator="true"
+                                 paginator="true" paginatorPosition="bottom"
                                  rowKey="#{item.idPREGUNTAS}"
-                                 rows="10"
-                                 rowsPerPageTemplate="10,20,30,40,50"
-                                 >
+                                 rows="7" >
 
                         <p:ajax event="rowSelect"   update="createButton viewButton editButton deleteButton"/>
                         <p:ajax event="rowUnselect" update="createButton viewButton editButton deleteButton"/>
 
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPreguntasTitle_idPREGUNTAS}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.idPREGUNTAS}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPreguntasTitle_pregunta}"/>
+                                <h:outputText value="#{bundle.Pregunta}"/>
                             </f:facet>
                             <h:outputText value="#{item.pregunta}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPreguntasTitle_ASPECTOidASPECTO}"/>
+                                <h:outputText value="#{bundle.Aspecto}"/>
                             </f:facet>
-                            <h:outputText value="#{item.ASPECTOidASPECTO}"/>
+                            <h:outputText value="#{item.ASPECTOidASPECTO.nombre}"/>
                         </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPreguntasTitle_ESTADOidESTADO}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.ESTADOidESTADO}"/>
-                        </p:column>
-                        <p:column>
-                            <f:facet name="header">
-                                <h:outputText value="#{bundle.ListPreguntasTitle_TIPOPREGUNTAidTIPOPREGUNTA}"/>
-                            </f:facet>
-                            <h:outputText value="#{item.TIPOPREGUNTAidTIPOPREGUNTA}"/>
-                        </p:column>
-                        <f:facet name="footer">
+                        <f:facet name="header">
                             <p:commandButton id="createButton" icon="ui-icon-plus"   value="#{bundle.Create}" actionListener="#{preguntasController.prepareCreate}" update=":PreguntasCreateForm" oncomplete="PF('PreguntasCreateDialog').show()"/>
                             <p:commandButton id="viewButton"   icon="ui-icon-search" value="#{bundle.View}" update=":PreguntasViewForm" oncomplete="PF('PreguntasViewDialog').show()" disabled="#{empty preguntasController.selected}"/>
                             <p:commandButton id="editButton"   icon="ui-icon-pencil" value="#{bundle.Edit}" update=":PreguntasEditForm" oncomplete="PF('PreguntasEditDialog').show()" disabled="#{empty preguntasController.selected}"/>
